--- a/index.html
+++ b/index.html
@@ -110,8 +110,9 @@
             <div class="title-area">
               <h2 class="tittle">WHAT IS TEDX ?</span></h2>
               <span class="tittle-line"></span>
-              <p>In the spirit of ideas worth spreading, TED has created a program called TEDx. TEDx is a program of local, self-organized events that bring people together to share a TED-like experience. Our event is called TEDxNSIT, where x = independently organized TED event. At our TEDxNSIT event, TEDTalks video and live speakers will combine to spark deep discussion and connection in a small group. The TED Conference provides general guidance for the TEDx program, but individual TEDx events, including ours, are self-organized.<br>
-              This independent TEDx event is operated under license from TED</p>
+              <p>In the spirit of ideas worth spreading, TED has created a program called TEDx. TEDx is a program of local,
+                self-organized events that bring people together to share a TED-like experience.
+              This independent TEDx event is operated under license from TED.</p>
             </div>
           </div>
           <!-- End welcome area -->
