--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 
 
   <!-- Start menu section -->
+
+<section id="imgsec">
   <section id="menu-area" class = "navbar-fixed-top">
     <nav class="navbar navbar-default main-navbar" role="navigation">
       <div class="container">
@@ -97,11 +99,13 @@
         </div>
       </div> -->
     </nav>
-  </section>
+    </section>
+
   <!-- End menu section -->
 
   <!-- Start about section -->
   <section id="about">
+
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -110,6 +114,7 @@
             <div class="title-area">
               <h2 class="tittle">WHAT IS TEDX ?</span></h2>
               <span class="tittle-line"></span>
+
               <p>In the spirit of ideas worth spreading, TED has created a program called TEDx. TEDx is a program of local,
                 self-organized events that bring people together to share a TED-like experience.
               This independent TEDx event is operated under license from TED.</p>
@@ -121,6 +126,9 @@
 
     </div>
   </section>
+</section>
+
+
   <!-- End about section -->
 
   <!-- Start call to action -->
