UI changes Changed padding

--- a/index.html
+++ b/index.html
@@ -106,19 +106,27 @@
   <!-- Start about section -->
   <section id="about">
 
+    <!--img alt="img" src="img/21495414-hand-drawn-business-ideas-sketch-against-white-background.png" width="1519.2" height="300"-->
+
     <div class="container">
       <div class="row">
         <div class="col-md-12">
           <!-- Start welcome area -->
           <div class="welcome-area">
-            <div class="title-area">
-              <h2 class="tittle">WHAT IS TEDX ?</span></h2>
+             <div class="title-area">
+              <h2 class="tittle">WHAT IS TEDX ?</h2>
               <span class="tittle-line"></span>
 
               <p>In the spirit of ideas worth spreading, TED has created a program called TEDx. TEDx is a program of local,
                 self-organized events that bring people together to share a TED-like experience.
               This independent TEDx event is operated under license from TED.</p>
+              <br><br><br><br>
+              <h1 class="title">TEDXNSIT</h1>
+              <span class="tittle-line"></span>
+              <p>Netaji Subhas Institute of Technology brings scholars, explorers and artists together in a rather extraordinary experience, that is TEDxNSIT. This immersive, daylong conference aims to share the talents of speakers and performers with audiences from around the world and weave magic with their tales. We believe that a man is, but the product of what he thinks. Thought is a free bird, but chained within the realm of one's own conscious self. It needs a shot, an effort, a glowing spark, engulfing the process and triggering it into action. It needs some necessary ingredients to pop. A single dream has the power to revolutionize the world, creating the aura that goes on to transform an era.  We present to you, the best ways to process your thoughts and turn them into successful ideas, to go beyond the horizon, and to break the monotony of our lives to create a utopian world that we desire. We, at TEDxNSIT, aim to engineer your vision, to open up your thoughts and make them happen, because everybody has ideas worth sharing.</p>
             </div>
+
+          </div>
           </div>
           <!-- End welcome area -->
         </div>
