Added text animation.

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         <div class="col-md-12">
           <div class="portfolio-area">
             <div class="title-area">
-              <h2 class="tittle">Past Speakers</h2>
+              <h2 class="tittle animation">Past Speakers</h2>
               <span class="tittle-line"></span>
               <p>List of all the previous speakers, and further segregration according to categories, upon clicking various divisions</p>
             </div>
@@ -890,7 +890,7 @@
             <!-- Start Testimonial area -->
             <div class="testimonial-area">
               <div class="title-area">
-                <h2 class="tittle">Testimonials</h2>
+                <h2 class="tittle ">Testimonials</h2>
                 <span class="tittle-line"></span>
               </div>
               <div class="testimonial-conten">
