--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <span class="icon-bar"></span>
           </button>
           <!-- LOGO -->
-           <a class="navbar-brand logo" href="index.html"><img src="assets/images/tedxnsit2015-white.png" alt="logo"></a>
+           <a class="navbar-brand logo" href="index.html"><img src="/assets/images/ed3037d577efc3dd63bfd2c4fd9669ee.png" alt="logo"></a>
 
         </div>
 
@@ -113,19 +113,19 @@
         <div class="col-md-12">
           <!-- Start welcome area -->
           <div class="welcome-area">
+            <div data-type="countdown" data-id="541275" class="tickcounter" style="width: 100%; position: relative; padding-bottom: 25%"><a href="//www.tickcounter.com/countdown/541275/coming-soon" title="Coming Soon !">Coming Soon !</a><a href="//www.tickcounter.com/" title="Countdown">Countdown</a></div><script>(function(d, s, id) { var js, pjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//www.tickcounter.com/static/js/loader.js"; pjs.parentNode.insertBefore(js, pjs); }(document, "script", "tickcounter-sdk"));</script><br></br><br></br>
              <div class="title-area">
-              <h2 class="tittle">WHAT IS TEDX ?</h2>
+              <h2 class="tittle">WHAT IS TED<sup>x</sup> ?</h2>
               <span class="tittle-line"></span>
 
               <p>In the spirit of ideas worth spreading, TED has created a program called TEDx. TEDx is a program of local,
                 self-organized events that bring people together to share a TED-like experience.
               This independent TEDx event is operated under license from TED.</p>
               <br><br><br><br>
-              <h1 class="title">TEDXNSIT</h1>
+              <h1 class="title">TED<sup>x</sup>NSIT</h1>
               <span class="tittle-line"></span>
               <p>Netaji Subhas Institute of Technology brings scholars, explorers and artists together in a rather extraordinary experience, that is TEDxNSIT. This immersive, daylong conference aims to share the talents of speakers and performers with audiences from around the world and weave magic with their tales. We believe that a man is, but the product of what he thinks. Thought is a free bird, but chained within the realm of one's own conscious self. It needs a shot, an effort, a glowing spark, engulfing the process and triggering it into action. It needs some necessary ingredients to pop. A single dream has the power to revolutionize the world, creating the aura that goes on to transform an era.  We present to you, the best ways to process your thoughts and turn them into successful ideas, to go beyond the horizon, and to break the monotony of our lives to create a utopian world that we desire. We, at TEDxNSIT, aim to engineer your vision, to open up your thoughts and make them happen, because everybody has ideas worth sharing.</p>
             </div>
-
           </div>
           </div>
           <!-- End welcome area -->
@@ -167,7 +167,7 @@
                 <div class="single-counter">
                   <span class="fa fa-facebook"></span>
                   <div class="counter-count">
-                    <span class="counter">2270</span>
+                    <span class="counter">3,604</span>
                     <p>Followers</p>
                   </div>
                 </div>
@@ -176,7 +176,7 @@
                 <div class="single-counter">
                   <span class="fa fa-bus"></span>
                   <div class="counter-count">
-                    <span class="counter">4</span>
+                    <span class="counter">6</span>
                     <p>Editions</p>
                   </div>
                 </div>
@@ -898,39 +898,56 @@
                 <div class="testimonial-slider">
                   <!-- single slide -->
                   <div class="single-slide">
-                    <p>I worked in the stage designing and offline publicity departments of tedx
-                       Tedx nsit is one of the best societies to work for due to the fabulous experience and chance of meeting few of the most inspiring and motivating people from around the world. One thing great about this society is the flat hierarchy which I have seen over past 3 years I have worked here with some extra ordinary seniors as well as superbly innovative juniors. The zeal of coming together with different ideas, implementing them, working at the admin all day is unmatched!</p>
+                    <p>TedX for me has been an incredible journey and a fantastic learning experience. Meeting people whose ideas have the potential to change the world cast a great shadow on my mind. Specially with people who have chosen paths that redefine conventions. The thrive of working and hustling to get things done and the team spirit is unmatched and it's an amazing experience that I was a part of.</p>
                     <div class="single-testimonial">
                       <img class="testimonial-thumb" src="img/Timeline/mam.png" alt="img">
-                      <p>Sameeksha Aggarwal</p>
-                      <span>Organiser, TEDxNSIT 2015</span>
+                      <p>Shatakshi Agrawal</p>
+                      <span>Organiser, TEDxNSIT 2017</span>
                     </div>
                   </div>
                   <!-- single slide -->
                   <div class="single-slide">
-                    <p>Being a part of the organising committee of tedx nsit helped me take forward a legacy built by my seniors and add my own ideas to it. Connecting with people from different fields made me realise that there is a whole new world out there where people have achieved great things by following their dreams. It's inspiring to know that I was able to show a glimpse of that world to my fellow NSITians which hopefully motivated them to pursue their own revolutionary ideas..</p>
+                    <p>TEDx is one of the most amazing events I have ever attended. Experience of being in the core team of TEDxNSIT is beyond explainable. All seniors are so awesome, friendly and helpful.We have lots of fun while doing work. So in short, TEDx is an unforgettable experience.</p>
                     <div class="git resetsingle-testimonial">
                       <img class="testimonial-thumb" src="img/Timeline/daminimam.png" alt="img">
-                      <p>Damini Mishra</p>
-                      <span>Orgainser, TEDxNSIT 2015</span>
+                      <p>Himanshi Verma</p>
+                      <span>Orgainser, TEDxNSIT 2017</span>
                     </div>
                   </div>
 
                    <div class="single-slide">
-                    <p>TEDx helped me connect those dots. I was lucky to be a part of the the organizing team for four years. The conference always managed to bring such an amazing bunch of people to work together. I've met some of the best people here who taught me to always question what exists and be more accepting of different perspectives when you do so. All in all, if I look back at the four years of my college life, TEDx is definitely one of the best and the most important things to have happened to me.</p>
+                    <p>Tedx NSIT made me to believe that to bring a change you always start from scratch. It gave me an opportunity to interact with the people who really caused a big impact on me.Tedx Overall has been an enriching experience for me.. I was fortunate enough to be a part of the organising committee. Apart from the learning,It gave me the best memories of my entire college life.</p>
                     <div class="single-testimonial">
                       <img class="testimonial-thumb" src="img/Timeline/sheetalmam.png" alt="img">
-                      <p>Sheetal Chauhan</p>
-                      <span>Organiser, TEDxNSIT 2015</span>
+                      <p>Yagya Choudhary</p>
+                      <span>Organiser, TEDxNSIT 2017</span>
                     </div>
                   </div>
 
                    <div class="single-slide">
-                    <p>Organising TEDx was a different experience altogether.Unlike other fests that happen in college, TEDx involves talking to pople who are subject matter experts in their respective fields and you learn to carry yourself professionally in front of them.It also gave me an opportunity to work with some amazing people who were very passionate about the concept of talks and TEDx and believed that the world was built from ideas and it should be shared openly and freely. I primarily handled website development in the two years of my association with TEDx. But I also did go on several trips to meet the speakers and handled several other communications with the sponsors and other partners of the events</p>
+                    <p>It is considered smart to learn from your own experiences. However, it is smarter to learn from others' experiences as no one ever made it to the top without help from others. A rendezvous of amazing speakers, intellectual audience and a hardworking organising team is TedxNSIT.</p>
                     <div class="single-testimonial">
                       <img class="testimonial-thumb" src="img/Timeline/nikhil.png" alt="img">
-                      <p>Nikhil Menon</p>
-                      <span>Organiser, TEDxNSIT 2012</span>
+                      <p>Kshitij</p>
+                      <span>Organiser, TEDxNSIT 2017</span>
+                    </div>
+                  </div>
+                  
+                  <div class="single-slide">
+                    <p>It is considered smart to learn from your own experiences. However, it is smarter to learn from others' experiences as no one ever made it to the top without help from others. A rendezvous of amazing speakers, intellectual audience and a hardworking organising team is TedxNSIT.</p>
+                    <div class="single-testimonial">
+                      <img class="testimonial-thumb" src="img/Timeline/nikhil.png" alt="img">
+                      <p>Kshitij</p>
+                      <span>Organiser, TEDxNSIT 2017</span>
+                    </div>
+                  </div>
+                  
+                  <div class="single-slide">
+                    <p>TEDxNSIT has always held a special place in my heart. Being a part of the 2015, 2016 and 2017 editions of TEDxNSIT has allowed me to meet some amazing individuals who taught me to face challenges with a smile. I will forever relish this one chapter of my life that made me who I am today. Come and be a part of TEDxNSIT!</p>
+                    <div class="single-testimonial">
+                      <img class="testimonial-thumb" src="img/Timeline/nikhil.png" alt="img">
+                      <p>Nithilasaravanan</p>
+                      <span>Licensee, TEDxNSIT 2017</span>
                     </div>
                   </div>
 
@@ -986,7 +1003,6 @@ c) The high point of the event to all those who attend it live is that they get 
         <div class="col-md-8 col-sm-6 col-xs-12">
           <div class="contact-right wow fadeInRight">
             <h2>Wanna Be A Part Of TEDXNSIT ?</h2>
-                <h3>Join Us By Clicking This Button :</h3>
                     <a class="typeform-share button" href="https://tedxnsit.typeform.com/to/SFzzD9" data-mode="popup"
                     style="display:inline-block;text-decoration:none;background-color:#F10606;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank">REGISTRATION FORM </a>
                     <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
