Added Testimonial Pics

--- a/index.html
+++ b/index.html
@@ -900,7 +900,7 @@
                   <div class="single-slide">
                     <p>TedX for me has been an incredible journey and a fantastic learning experience. Meeting people whose ideas have the potential to change the world cast a great shadow on my mind. Specially with people who have chosen paths that redefine conventions. The thrive of working and hustling to get things done and the team spirit is unmatched and it's an amazing experience that I was a part of.</p>
                     <div class="single-testimonial">
-                      <img class="testimonial-thumb" src="img/Timeline/mam.png" alt="img">
+                      <img class="testimonial-thumb" src="/img/Timeline/PicsArt_04-08-07.41.18.jpg" alt="img">
                       <p>Shatakshi Agrawal</p>
                       <span>Organiser, TEDxNSIT 2017</span>
                     </div>
@@ -909,7 +909,7 @@
                   <div class="single-slide">
                     <p>TEDx is one of the most amazing events I have ever attended. Experience of being in the core team of TEDxNSIT is beyond explainable. All seniors are so awesome, friendly and helpful.We have lots of fun while doing work. So in short, TEDx is an unforgettable experience.</p>
                     <div class="git resetsingle-testimonial">
-                      <img class="testimonial-thumb" src="img/Timeline/daminimam.png" alt="img">
+                      <img class="testimonial-thumb" src="/img/Timeline/PicsArt_04-08-07.39.55.jpg" alt="img">
                       <p>Himanshi Verma</p>
                       <span>Orgainser, TEDxNSIT 2017</span>
                     </div>
@@ -918,7 +918,7 @@
                    <div class="single-slide">
                     <p>Tedx NSIT made me to believe that to bring a change you always start from scratch. It gave me an opportunity to interact with the people who really caused a big impact on me.Tedx Overall has been an enriching experience for me.. I was fortunate enough to be a part of the organising committee. Apart from the learning,It gave me the best memories of my entire college life.</p>
                     <div class="single-testimonial">
-                      <img class="testimonial-thumb" src="img/Timeline/sheetalmam.png" alt="img">
+                      <img class="testimonial-thumb" src="/img/Timeline/PicsArt_04-08-07.40.32.jpg" alt="img">
                       <p>Yagya Choudhary</p>
                       <span>Organiser, TEDxNSIT 2017</span>
                     </div>
@@ -934,18 +934,9 @@
                   </div>
                   
                   <div class="single-slide">
-                    <p>It is considered smart to learn from your own experiences. However, it is smarter to learn from others' experiences as no one ever made it to the top without help from others. A rendezvous of amazing speakers, intellectual audience and a hardworking organising team is TedxNSIT.</p>
-                    <div class="single-testimonial">
-                      <img class="testimonial-thumb" src="img/Timeline/nikhil.png" alt="img">
-                      <p>Kshitij</p>
-                      <span>Organiser, TEDxNSIT 2017</span>
-                    </div>
-                  </div>
-                  
-                  <div class="single-slide">
                     <p>TEDxNSIT has always held a special place in my heart. Being a part of the 2015, 2016 and 2017 editions of TEDxNSIT has allowed me to meet some amazing individuals who taught me to face challenges with a smile. I will forever relish this one chapter of my life that made me who I am today. Come and be a part of TEDxNSIT!</p>
                     <div class="single-testimonial">
-                      <img class="testimonial-thumb" src="img/Timeline/nikhil.png" alt="img">
+                      <img class="testimonial-thumb" src="/img/Timeline/PicsArt_04-08-07.41.44.jpg" alt="img">
                       <p>Nithilasaravanan</p>
                       <span>Licensee, TEDxNSIT 2017</span>
                     </div>
