--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@
                    <div class="single-slide">
                     <p>It is considered smart to learn from your own experiences. However, it is smarter to learn from others' experiences as no one ever made it to the top without help from others. A rendezvous of amazing speakers, intellectual audience and a hardworking organising team is TedxNSIT.</p>
                     <div class="single-testimonial">
-                      <img class="testimonial-thumb" src="img/Timeline/nikhil.png" alt="img">
+                      <img class="testimonial-thumb" src="/img/Timeline/PicsArt_04-08-07.42.07.jpg" alt="img">
                       <p>Kshitij</p>
                       <span>Organiser, TEDxNSIT 2017</span>
                     </div>
