--- a/index.html
+++ b/index.html
@@ -986,8 +986,7 @@ c) The high point of the event to all those who attend it live is that they get 
             </address>
             <address class="single-address">
               <h4>E-Mail:<a href="mailto:tedxnsit@nsitonline.in"> tedxnsit@nsitonline.in</a> </h4>
-              <p><a href="mailto:shashwat.d.nagar@gmail.com">Shashwat Deepali Nagar(Licensee): shashwat.d.nagar@gmail.com</a></p>
-              <p><a href="mailto:kritin.gupta@gmail.com">Kritin Gupta:kritin.gupta@gmail.com </a></p>
+              <p><a href="mailto:tpardhe@gmail.com">Tushar Pardhe:tpardhe@gmail.com </a></p>
             </address>
           </div>
         </div>
