--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!-- Fonts -->
     <!-- Open Sans for body font -->
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans|Gugi' rel='stylesheet' type='text/css'>
     <!-- Raleway for Title -->
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
     <!-- Pacifico for 404 page   -->
@@ -115,7 +115,7 @@
           <!-- Start welcome area -->
 
           <div class="welcome-area">
-            <div class="contact-right wow fadeInRight">
+            <div class="contact-right wow ">
             <div data-type="countdown" data-id="541275" class="tickcounter" style="width: 100%; position: relative; padding-bottom: 25%"><a href="//www.tickcounter.com/countdown/541275/coming-soon" title="Coming Soon !">Coming Soon !</a><a href="//www.tickcounter.com/" title="Countdown">Countdown</a></div><script>(function(d, s, id) { var js, pjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//www.tickcounter.com/static/js/loader.js"; pjs.parentNode.insertBefore(js, pjs); }(document, "script", "tickcounter-sdk"));</script><br></br>
             <section id="register">
                   <div  class="registration">
@@ -172,9 +172,9 @@
 
             <div class="title-area">
 
-              <div class="container">
-                <div class="row">
-                  <div class="col-md-12">
+              <!--<div class="container">-->
+                <!--<div class="row">-->
+                  <!--<div class="col-md-12">-->
                     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                       <div class="carousel-inner">
                         <div class="item active">
@@ -190,23 +190,25 @@
                     </div>
                     <div class="main-text hidden-xs">
                       <div class="col-md-12 text-center">
+                        <div class="ted-left wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
                         <h2 class="tittle">WHAT IS TED<sup>x</sup> ?</h2>
                         <span class="tittle-line"></span>
 
                         <p>In the spirit of ideas worth spreading, TED has created a program called TEDx. TEDx is a program of local,
                         self-organized events that bring people together to share a TED-like experience.
                         This independent TEDx event is operated under license from TED.</p>
-                        <br><br><br><br>
-                        <h1 class="title">TED<sup>x</sup>NSIT</h1>
+                        </div>
+                        <div class="ted-left wow fadeInLeft" style="visibility: visible; animation-name: fadeInRight;">
+                        <h1 class="tittle">TED<sup>x</sup>NSIT</h1>
                         <span class="tittle-line"></span>
                         <p>Netaji Subhas Institute of Technology brings scholars, explorers and artists together in a rather extraordinary experience, that is TEDxNSIT. This immersive, daylong conference aims to share the talents of speakers and performers with audiences from around the world and weave magic with their tales. We believe that a man is, but the product of what he thinks. Thought is a free bird, but chained within the realm of one's own conscious self. It needs a shot, an effort, a glowing spark, engulfing the process and triggering it into action. It needs some necessary ingredients to pop. A single dream has the power to revolutionize the world, creating the aura that goes on to transform an era.  We present to you, the best ways to process your thoughts and turn them into successful ideas, to go beyond the horizon, and to break the monotony of our lives to create a utopian world that we desire. We, at TEDxNSIT, aim to engineer your vision, to open up your thoughts and make them happen, because everybody has ideas worth sharing.</p>
-                        <div class=""></div>
+                        </div>
                       </div>
                     </div>
                   </div>
-                </div>
-              </div>
-            </div>
+                <!--</div>-->
+              <!--</div>-->
+            <!--</div>-->
 
 </section>
 
