--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                <div class="welcome-area">
             <div class="title-area">
               <div class="contact-left wow fadeInLeft">
-              <h1 class="tittle">Who We Are</span></h1>
+              <h1 class="tittle">About TedxNSIT</span></h1>
               <span class="tittle-line"></span>
               <p>Netaji Subhas Institute of Technology brings scholars, explorers and artists together in a rather extraordinary experience, that is TEDxNSIT. This immersive, daylong conference aims to share the talents of speakers and performers with audiences from around the world and weave magic with their tales. We believe that a man is, but the product of what he thinks. Thought is a free bird, but chained within the realm of one's own conscious self. It needs a shot, an effort, a glowing spark, engulfing the process and triggering it into action. It needs some necessary ingredients to pop. A single dream has the power to revolutionize the world, creating the aura that goes on to transform an era.  We present to you, the best ways to process your thoughts and turn them into successful ideas, to go beyond the horizon, and to break the monotony of our lives to create a utopian world that we desire. We, at TEDxNSIT, aim to engineer your vision, to open up your thoughts and make them happen, because everybody has ideas worth sharing.</p>
             </div></div>
